feature(vehicles crud api)
