# backend/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\VehicleController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -17,4 +18,13 @@ use Illuminate\Support\Facades\Route;
 
 Route::controller(UserController::class)->group(function () {
   Route::post('/login', 'login');
+});
+
+Route::middleware('auth:sanctum')->group(function() {
+  Route::controller(VehicleController::class)->group(function () {
+      Route::get('/vehicles/{id?}', 'get');
+      Route::post('/vehicles', 'post');
+      Route::delete('/vehicles/{id}', 'delete');
+      Route::put('/vehicles/{id}', 'put');
+  });
 });
